--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -290,19 +290,12 @@
   "scan_thanks_contribution_signal_hint": "귀하의 데이터 기여에 감사드립니다！",
   "scan_confirm_upload" : "신호 데이터 업로드",
   "scan_collect_signal_func": "${Num} 개의 신호 수집",
-  "data_position_adding": "添加中",
-  "select_category_bookstore": "书店",
-  "select_category_bakery": "西饼店",
-  "select_category_chocolateshop": "巧克力店",
-  "select_category_fabrics": "布艺店",
-  "select_category_healthfood": "健康食品店",
-  "select_category_nailsalon": "美甲店",
+  "data_position_adding": "添加地点中",
   "select_category": "选择类别",
   "select_position": "选择位置",
   "user_defined_time_format_hint": "自定义营业时间",
   "business_time": "营业时间",
   "please_select_business_hours_hint": "请选择营业时间",
-  "please_enter_correct_time_format_hint": "请输入正确的时间，例如 07:00-23:00",
   "throughout_of_day": "全天（24小时）",
   "business_time_sunday": "周日",
   "business_time_monday": "周一",
@@ -311,48 +304,43 @@
   "business_time_thursday": "周四",
   "business_time_friday": "周五",
   "business_time_saturday": "周六",
-  "confirm_info_wrong": "信息有误",
-  "confirm_info_right": "信息正确",
-  "confirm_position_name_func": "名称：${name}",
-  "confirm_position_func": "位置：${address}",
-  "info_is_wrong_please_again_submit_hint": "您提交的信息有误，请重试。",
-  "position_info_confirm": "位置信息确认",
+  "confirm_info_wrong": "地点有误",
+  "confirm_info_right": "地点正确",
   "category": "类别",
   "postal_code": "邮编",
   "phone_number": "电话",
   "website": "网址",
   "work_time": "工作时间",
-  "category_cannot_be_empty_hint": "类别不能为空",
-  "take_pictures_must_not_be_empty_hint": "拍摄图片不能为空",
-  "poi_upload_protocol_not_accepted_hint": "地理位置上传协议未接受",
+  "category_cannot_be_empty_hint": "请选择地点类别",
+  "take_pictures_must_not_be_empty_hint": "请添加地点现场照片",
+  "poi_upload_protocol_not_accepted_hint": "请接受地点上传协议",
   "upload_protocol": "上传协议",
-  "geographical_position": "地理位置",
   "submit": "提交",
   "detail": "详情",
   "details_of_street": "街道详情",
   "house_number": "门牌号码",
-  "please_add_streets_hint": "请添加街道",
+  "please_add_streets_hint": "请输入街道",
   "please_enter_door_number_hint": "请输入门牌号码",
   "please_enter_postal_code": "请输入邮政编码",
   "click_auto_get_hint": "点击自动获取",
   "scene_photographed": "现场拍照",
   "please_select_category_hint": "请选择类别",
   "please_add_business_hours_hint": "请添加营业时间",
-  "add_failed_hint": "存储失败!",
+  "add_failed_hint": "添加失败!",
   "name": "名称",
   "place_name_cannot_be_empty_hint": "地点名称不能为空",
   "please_enter_name_of_location_hint": "请输入地点名称",
   "please_enter_category_keywords_hint": "输入类别关键词",
-  "no_verifiable_poi_around_hint": "周围没有可验证的位置信息。",
-  "poi_confirm_title_hint": "你认为这个位置信息是真实存在并且信息描述完全正确的，确定提交吗？",
-  "poi_add_success_hint": "位置信息添加成功",
-  "poi_confirm_success_hint": "位置信息确认成功",
+  "no_verifiable_poi_around_hint": "周围没有可验证的地点。",
+  "poi_confirm_title_hint": "你认为这个地点是真实存在并且描述完全正确的，确定提交吗？",
+  "poi_add_success_hint": "添加成功",
+  "poi_confirm_success_hint": "提交成功",
   "unknown_locations": "未知位置",
-  "poi_confirm_title_error": "你认为这个位置信息是不存在或者信息描述有误的，确定提交吗？",
-  "poi_upload_protocol": "POI上传协议",
+  "poi_confirm_title_error": "你认为这个地点是不存在或者描述有误的，确定提交吗？",
+  "poi_upload_protocol": "上传协议",
   "select_position_please_again_hint": "选择位置失败，请重试",
   "get_poi_fail_please_again": "获取位置信息失败，请先定位地图到你所在位置。",
-  "please_input_custom_time_hint": "请填写自定义时间",
+  "please_input_custom_time_hint": "请填写营业时间时间",
   "no_remark": "无备注",
   "post_my_check": "提交验证"
 }
