--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -291,18 +291,11 @@
   "scan_confirm_upload" : "上传信号数据",
   "scan_collect_signal_func": "已收集到${num}个信号",
   "data_position_adding": "添加地点中",
-  "select_category_bookstore": "书店",
-  "select_category_bakery": "西饼店",
-  "select_category_chocolateshop": "巧克力店",
-  "select_category_fabrics": "布艺店",
-  "select_category_healthfood": "健康食品店",
-  "select_category_nailsalon": "美甲店",
   "select_category": "选择类别",
   "select_position": "选择位置",
   "user_defined_time_format_hint": "自定义营业时间",
   "business_time": "营业时间",
   "please_select_business_hours_hint": "请选择营业时间",
-  "please_enter_correct_time_format_hint": "请输入正确的时间，例如 07:00-23:00",
   "throughout_of_day": "全天（24小时）",
   "business_time_sunday": "周日",
   "business_time_monday": "周一",
@@ -313,10 +306,6 @@
   "business_time_saturday": "周六",
   "confirm_info_wrong": "地点有误",
   "confirm_info_right": "地点正确",
-  "confirm_position_name_func": "名称：${name}",
-  "confirm_position_func": "位置：${address}",
-  "info_is_wrong_please_again_submit_hint": "您提交的信息有误，请重试。",
-  "position_info_confirm": "位置信息确认",
   "category": "类别",
   "postal_code": "邮编",
   "phone_number": "电话",
@@ -331,7 +320,7 @@
   "detail": "详情",
   "details_of_street": "街道详情",
   "house_number": "门牌号码",
-  "please_add_streets_hint": "请添加街道",
+  "please_add_streets_hint": "请输入街道",
   "please_enter_door_number_hint": "请输入门牌号码",
   "please_enter_postal_code": "请输入邮政编码",
   "click_auto_get_hint": "点击自动获取",
@@ -343,7 +332,7 @@
   "place_name_cannot_be_empty_hint": "地点名称不能为空",
   "please_enter_name_of_location_hint": "请输入地点名称",
   "please_enter_category_keywords_hint": "输入类别关键词",
-  "no_verifiable_poi_around_hint": "周围没有可验证的位置信息。",
+  "no_verifiable_poi_around_hint": "周围没有可验证的地点。",
   "poi_confirm_title_hint": "你认为这个地点是真实存在并且描述完全正确的，确定提交吗？",
   "poi_add_success_hint": "添加成功",
   "poi_confirm_success_hint": "提交成功",
@@ -352,7 +341,7 @@
   "poi_upload_protocol": "上传协议",
   "select_position_please_again_hint": "选择位置失败，请重试",
   "get_poi_fail_please_again": "获取位置信息失败，请先定位地图到你所在位置。",
-  "please_input_custom_time_hint": "请填写自定义时间",
+  "please_input_custom_time_hint": "请填写营业时间时间",
   "no_remark": "无备注",
   "post_my_check": "提交验证"
 }
