--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -342,5 +342,6 @@
   "get_poi_fail_please_again": "获取位置信息失败，请先定位地图到你所在位置。",
   "please_input_custom_time_hint": "请填写营业时间时间",
   "no_remark": "无备注",
-  "post_my_check": "提交验证"
+  "post_my_check": "提交验证",
+  "no_category": "暂无此类别"
 }
