【Add】add english translation

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -269,21 +269,21 @@
   "open_bluetooth": "Turn on Bluetooth",
   "please_open_bluetooth": "Bluetooth beacons can effectively assist positioning, please turn on the device Bluetooth",
   "open_wifi": "Turn on WIFI",
-  "please_open_wifi": "WIFI signal can assist triangle positioning, please turn on the device WIFI",
-  "require_location": "Apply for positioning permission",
-  "require_location_message": "Please authorize the use of positioning permissions",
+  "please_open_wifi": "WIFI signal can assist triangle positioning, please turn on Wi-Fi",
+  "require_location": "Enable your location data",
+  "require_location_message": "Allow Titan to access your location data",
   "open_location_service": "Turn on location services",
-  "open_location_service_message": "Location services are off, please turn on",
-  "scan_name_wifi": "WiFi",
+  "open_location_service_message": "Location services are off, please turn it on",
+  "scan_name_wifi": "Wi-Fi",
   "scan_name_cellular": "Cell Tower",
   "scan_name_bluetooth": "Bluetooth",
   "scan_name_gps": "GPS",
   "scan_name_start" : "Start",
   "scan_name_title" : "Signal scan",
-  "scan_signal_upload_protocol" : "Signal upload protocol",
-  "scan_exit_tips" : "Scanning, confirm exit?",
-  "scan_hyn_is_empty" : "HYN wallet is empty",
-  "scan_finish" : "Scan completed",
+  "scan_signal_upload_protocol" : "Privacy Policy",
+  "scan_exit_tips" : "Scanning, are you sure you want to quit?",
+  "scan_hyn_is_empty" : "No HYN wallet",
+  "scan_finish" : "Scan complete",
   "scan_ing_func": "Scanning ${scanName}",
   "scan_upload_error" : "Upload failed",
   "scan_upload_signal_success_hint": "Signal data uploaded successfully",
@@ -296,53 +296,57 @@
   "user_defined_time_format_hint": "User defined time format",
   "business_time": "Business time",
   "please_select_business_hours_hint": "Select business hours",
-  "throughout_of_day": "Throughout of day（24 hours）",
+  "throughout_of_day": "All day（24 hours）",
   "business_time_sunday": "Sun.",
   "business_time_monday": "Mon.",
   "business_time_tuesday": "Tues.",
-  "business_time_wednesday": "Wednes.",
+  "business_time_wednesday": "Wed.",
   "business_time_thursday": "Thurs.",
   "business_time_friday": "Fri.",
-  "business_time_saturday": "Sta.",
+  "business_time_saturday": "Sat.",
   "confirm_info_wrong": "Error",
-  "confirm_info_right": "Right",
+  "confirm_info_right": "Correct",
+  "confirm_position_name_func": "Name：${name}",
+  "confirm_position_func": "Address：${address}",
+  "info_is_wrong_please_again_submit_hint": "Incorrect entry, please try again",
+  "position_info_confirm": " Confirm POI",
   "category": "Category",
-  "postal_code": "Postal code",
+  "postal_code": "Postcode",
   "phone_number": "Phone number",
   "website": "Website",
-  "work_time": "Work time",
-  "category_cannot_be_empty_hint": "category cannot be empty",
-  "take_pictures_must_not_be_empty_hint": "take pictures must not be empty",
-  "poi_upload_protocol_not_accepted_hint": "poi upload protocol not accepted",
-  "upload_protocol": " upload protocol",
+  "work_time": "Working hours",
+  "category_cannot_be_empty_hint": "Select an address category",
+  "take_pictures_must_not_be_empty_hint": "Add a POI photo",
+  "poi_upload_protocol_not_accepted_hint": "I accept Privacy Policy",
+  "upload_protocol": "Privacy Policy",
   "submit": "Submit",
-  "detail": "Detail",
-  "details_of_street": "Details of street",
-  "house_number": "House number",
-  "please_add_streets_hint": "Add streets",
+  "detail": "Details",
+  "details_of_street": "Street info",
+  "house_number": "House no.",
+  "please_add_streets_hint": "Add street",
   "please_enter_door_number_hint": "Enter door number",
-  "please_enter_postal_code": "Enter postal code",
-  "click_auto_get_hint": "Click Auto Get",
-  "scene_photographed": "Scene Photographed",
-  "please_select_category_hint": "Select category",
-  "please_add_business_hours_hint": "Add business hours",
-  "add_failed_hint": "Add failed!",
+  "please_enter_postal_code": "Enter postcode",
+  "click_auto_get_hint": "Click to autofill",
+  "scene_photographed": "Take a photo",
+  "please_select_category_hint": "Select a category",
+  "please_add_business_hours_hint": "Add opening hours",
+  "add_failed_hint": "Failed!",
   "name": "Name",
-  "place_name_cannot_be_empty_hint": "Place name cannot be empty",
-  "please_enter_name_of_location_hint": "Enter name of location",
+  "place_name_cannot_be_empty_hint": "Name entry cannot be blank",
+  "please_enter_name_of_location_hint": "Enter a location name",
   "please_enter_category_keywords_hint": "enter category keywords",
-  "no_verifiable_poi_around_hint": "There is no verifiable location information around。",
-  "poi_confirm_title_hint": "Do you believe that the location information is real and that the description of the information is completely correct？",
-  "poi_add_success_hint": "Poi was added successfully",
-  "poi_confirm_success_hint": "Poi confirms success",
+  "no_verifiable_poi_around_hint": "No verifiable POI nearby",
+  "poi_confirm_title_hint": "Please confirm all the POI details before you submit",
+  "poi_add_success_hint": "POI was added successfully",
+  "poi_confirm_success_hint": "Submission Successful",
   "unknown_locations": "Unknown locations",
-  "poi_confirm_title_error": "Do you think the location information does not exist or the information description is wrong, are you sure to submit？",
-  "poi_upload_protocol": "POI Upload Protocol",
-  "select_position_please_again_hint": "Failed to select location. Please try again",
-  "get_poi_fail_please_again": "Failed to obtain location information, please locate the map to your location first。",
-  "please_input_custom_time_hint": "Please input custom time",
-  "no_remark": "No remark",
-  "post_my_check": "Post my check",
+  "poi_confirm_title_error": "Are you sure the POI is incorrect before you submit？",
+  "poi_upload_protocol": "Privacy Policy",
+  "select_position_please_again_hint": "Location selection failed. Please try again",
+  "get_poi_fail_please_again": "Please allow access to your location。",
+  "please_input_custom_time_hint": "Please enter a time",
+  "no_remark": "No remarks",
+  "post_my_check": "Submit verification",
   "no_category": "No such category",
-  "hot_search": "popular searches："
+  "hot_search": "Popular searches："
 }
