--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -304,8 +304,8 @@
   "business_time_thursday": "Thurs.",
   "business_time_friday": "Fri.",
   "business_time_saturday": "Sat.",
-  "confirm_info_wrong": "Error",
-  "confirm_info_right": "Correct",
+  "confirm_info_wrong": "Error Address",
+  "confirm_info_right": "Correct Address",
   "confirm_position_name_func": "Name：${name}",
   "confirm_position_func": "Address：${address}",
   "info_is_wrong_please_again_submit_hint": "Incorrect entry, please try again",
