--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -567,5 +567,6 @@
   "no_remark": "无备注",
   "post_my_check": "提交验证",
   "no_category": "暂无相关类别",
-  "hot_search": "热门搜索："
+  "hot_search": "热门搜索：",
+  "my_info": "我的信息"
 }
