[Update] update me ui

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -567,6 +567,5 @@
   "no_remark": "No remarks",
   "post_my_check": "Submit verification",
   "no_category": "No such category",
-  "hot_search": "Popular searches：",
-  "my_info": "My information"
+  "hot_search": "Popular searches："
 }
