--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -567,6 +567,5 @@
   "no_remark": "비고 무",
   "post_my_check": "인증 제출",
   "no_category": "해당 카테고리 무",
-  "hot_search": "인기 검색어：",
-  "my_info": "我的信息"
+  "hot_search": "인기 검색어："
 }
