--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -332,7 +332,7 @@
   "please_input_fund_pwd_hint": "请输入资金密码",
   "recharge": "充值",
   "fail_get_user_recharge_address_hint": "获取用户充值地址失败",
-  "current_exchange_rate": "当前 ${to} 兑换 ${currency} 的比例为",
+  "current_exchange_rate": "当前 ${to} 兑换 ${currency} 的汇率为",
   "Tips": "提示",
   "no_wallet_hint": "你还没有钱包.",
   "create": "创建",
