--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -567,5 +567,8 @@
   "no_remark": "无备注",
   "post_my_check": "提交验证",
   "no_category": "暂无相关类别",
-  "hot_search": "热门搜索："
+  "hot_search": "热门搜索：",
+  "task_un_finished": "任务未完成",
+  "task_finished": "任务已完成",
+  "task_finished_func": "扫描信号${scanTimes}次，添加地点${addPoiTimes}次，验证地点${verifyPoiTimes}次"
 }
