--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -575,5 +575,14 @@
   "task_is_finished_func": "${todayTimes}/${times}次，已完成",
   "task_to_standard": "任务达标:",
   "task_to_standard_rules": "任务达标规则将会在2020年春节元宵节后在合理的范围内有所调整。",
-  "task_to_standard_func": "需完成${times1}次【扫描附近信号】、${times2}次【添加附近地点】和${times3}次【验证附近地点】。多出的贡献次数不影响达标。"
+  "task_to_standard_func": "需完成${times1}次【扫描附近信号】、${times2}次【添加附近地点】和${times3}次【验证附近地点】。多出的贡献次数不影响达标。",
+  "recharge_tips": "充值提示",
+  "this_address": "此地址",
+  "only_accept_hyn_assets": "只接受HYN资产",
+  "do_deposit_other_asset": "，请勿向此地址充值其他资产，否则将无法找回！",
+  "i_already_know": "我已知晓",
+  "withdrawal_tips": "提币提示",
+  "withdrawal_address": "提币地址",
+  "only_accept_hyn_addresses": "只接受HYN地址",
+  "do_not_provide_other_address": "，切勿提供其他资产地址，否则将无法找回！"
 }
