[Fix] fix ui pixels

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -567,22 +567,22 @@
   "no_remark": "No remarks",
   "post_my_check": "Submit verification",
   "no_category": "No such category",
-  "hot_search": "Popular searches：",
-  "task_un_finished": "任务未完成",
-  "task_finished": "任务已完成",
-  "task_finished_func": "扫描信号${scanTimes}次，添加地点${addPoiTimes}次，验证地点${verifyPoiTimes}次",
-  "task_un_finished_func": "${todayTimes}/${times}次，未完成",
-  "task_is_finished_func": "${todayTimes}/${times}次，已完成",
-  "task_to_standard": "任务达标:",
-  "task_to_standard_rules": "任务达标规则将会在2020年春节元宵节后在合理的范围内有所调整。",
-  "task_to_standard_func": "需完成${times1}次【扫描附近信号】、${times2}次【添加附近地点】和${times3}次【验证附近地点】。多出的贡献次数不影响达标。",
-  "recharge_tips": "充值提示",
-  "this_address": "此地址",
-  "only_accept_hyn_assets": "只接受HYN资产",
-  "do_deposit_other_asset": "，请勿向此地址充值其他资产，否则将无法找回！",
-  "i_already_know": "我已知晓",
-  "withdrawal_tips": "提币提示",
-  "withdrawal_address": "提币地址",
-  "only_accept_hyn_addresses": "只接受HYN地址",
-  "do_not_provide_other_address": "，切勿提供其他资产地址，否则将无法找回！"
+  "hot_search": "Trends：",
+  "task_un_finished": "Unfinished Tasks",
+  "task_finished": "Task Completed",
+  "task_finished_func": "Signal scan ${scanTimes}times，Add POI ${addPoiTimes}times，Verify POI ${verifyPoiTimes}times",
+  "task_un_finished_func": "${todayTimes}/${times}times，unfinished",
+  "task_is_finished_func": "${todayTimes}/${times}times，completed",
+  "task_to_standard": "How to achieve your goals:",
+  "task_to_standard_rules": "Reasonable revision of the task rules will be applied after the Lantern Festival in 2020。",
+  "task_to_standard_func": "Must complete ${times1}time【Signal Scan】,${times2}times【Add POI】,${times3}times【Verify POI】。Excessive contributions will not count in the final result。",
+  "recharge_tips": "Top-up reminder",
+  "this_address": "The wallet address",
+  "only_accept_hyn_assets": "ONLY accepts HYN",
+  "do_deposit_other_asset": "，DO NOT deposit non-HYN tokens to the address, otherwise your asset will not be retrieved!",
+  "i_already_know": "I have acknowledged",
+  "withdrawal_tips": "Withdrawal reminder",
+  "withdrawal_address": "Withdrawal address",
+  "only_accept_hyn_addresses": " ONLY accepts HYN ",
+  "do_not_provide_other_address": "，DO NOT provide non-HYN address, otherwise your asset will be retrieved!"
 }
