--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -567,6 +567,7 @@
   "no_remark": "No remarks",
   "post_my_check": "Submit verification",
   "no_category": "No such category",
+  "add_failed_exist_hint": "This Poi already exists, please add another poi",
   "hot_search": "Trends：",
   "task_un_finished": "Unfinished Tasks",
   "task_finished": "Task Completed",
