[add] add ko translations

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -569,21 +569,23 @@
   "no_category": "해당 카테고리 무",
   "add_failed_exist_hint": "이 위치는 이미 존재합니다. 다른 위치를 추가하십시오",
   "hot_search": "인기 검색어：",
-  "task_un_finished": "任务未完成",
-  "task_finished": "任务已完成",
-  "task_finished_func": "扫描信号${scanTimes}次，添加地点${addPoiTimes}次，验证地点${verifyPoiTimes}次",
-  "task_un_finished_func": "${todayTimes}/${times}次，未完成",
-  "task_is_finished_func": "${todayTimes}/${times}次，已完成",
-  "task_to_standard": "任务达标:",
-  "task_to_standard_rules": "任务达标规则将会在2020年春节元宵节后在合理的范围内有所调整。",
-  "task_to_standard_func": "需完成${times1}次【扫描附近信号】、${times2}次【添加附近地点】和${times3}次【验证附近地点】。多出的贡献次数不影响达标。",
-  "recharge_tips": "充值提示",
-  "this_address": "此地址",
-  "only_accept_hyn_assets": "只接受HYN资产",
-  "do_deposit_other_asset": "，请勿向此地址充值其他资产，否则将无法找回！",
-  "i_already_know": "我已知晓",
-  "withdrawal_tips": "提币提示",
-  "withdrawal_address": "提币地址",
-  "only_accept_hyn_addresses": "只接受HYN地址",
-  "do_not_provide_other_address": "，切勿提供其他资产地址，否则将无法找回！"
+  "task_un_finished": "임무가 미완성되다",
+  "task_finished": "임무를 이미 완성하였다",
+  "task_finished_func": "신호를 ${scanTimes}회 스캔하고, 지점을 ${addPoiTimes}회 추가하고 , 지점을 ${verifyPoiTimes}회 검증한다",
+  "task_un_finished_func": "${todayTimes}/${times}회를 미완성한다",
+  "task_is_finished_func": "${todayTimes}/${times}회를 완성했다",
+  "task_to_standard": "임무가 표준에 달하다:",
+  "task_to_standard_rules": "임무 달성 기준 규칙은 2020년 설 정월대보름 이후 합리적인 범위에서 조정될 것이다.",
+  "task_to_standard_func":
+  "${times1}회 [근처 신호를 스캔함], ${times2}회 [근처 지점을 추가함] 및${times3}회 [근처 지점을 검증함]을 완료해야 한다.더 많은 기여한 횟수는 기준 달성에 에 영향을 미치지 않는다.",
+  "recharge_tips": "충전 알림:",
+  "this_address": "이 주소",
+  "only_accept_hyn_assets": "HYN 자산만 수락하다",
+  "do_deposit_other_asset": ",이 주소로 다른 자산에 충전하지 마십시오! 그렇지 않으면 되찾을 수 없습니다! ",
+  "i_already_know": "나는 이미 알고 있다",
+  "withdrawal_tips": "화폐 인출 알림",
+  "withdrawal_address": "화폐 인출 주소",
+  "only_accept_hyn_addresses": "HYN 주소만 수락하다",
+  "do_not_provide_other_address":
+  ",다른 자산 주소를 절대 제공하지 마십시오! 그렇지 않으면 되찾을 수 없습니다! "
 }
