--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -345,5 +345,7 @@
   "post_my_check": "Submit verification",
   "no_category": "No such category",
   "hot_search": "Popular searches：",
-  "add_failed_exist_hint": "This location already exists, please add another location"
+  "add_failed_exist_hint": "This location already exists, please add another location",
+  "epidemic_map": "Epidemic Map",
+  "epidemic_map_desc": "New pneumonia outbreak"
 }
