wallet support usdt.  buy hash rate need usdt and hyn

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -331,8 +331,8 @@
   "withdrawal": "Withdraw",
   "recharge": "Top-up",
   "balance_with_unit": "Account Balance(USDT)",
-  "earnings_balance": "Earnings\nBalance",
-  "recharge_balance": "Top-up\nBalance",
+  "earnings_balance": "Earnings",
+  "recharge_balance": "Top-up",
   "bill_flow": "Transactions",
   "withdrawal_records": "Withdrawal record",
   "withdrawal_with_quantity": "Withdraw：${count}",
