--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -386,8 +386,8 @@
   "max_range_func": "최대범위는약：${maxMeter} 미터",
   "withdrawal": "인출",
   "balance_with_unit": "계정잔액(USDT)",
-  "earnings_balance": "수익잔액",
-  "recharge_balance": "충전잔액",
+  "earnings_balance": "수익",
+  "recharge_balance": "충전",
   "bill_flow": "판매액명세서",
   "withdrawal_records": "인출기록",
   "withdrawal_with_quantity": "인출：${count}",
