--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -346,7 +346,7 @@
   "no_category": "No such category",
   "hot_search": "Popular searches：",
   "add_failed_exist_hint": "This location already exists, please add another location",
-  "epidemic_map": "Ncov Map",
-  "epidemic_map_desc": "New pneumonia outbreak",
-  "suspected": "suspected"
+  "epidemic_map": "nCoV Map",
+  "epidemic_map_desc": "Wuhan Virus Cases Tracking Map",
+  "suspected": "pending"
 }
