--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -591,7 +591,7 @@
   "suspected": "pending",
   "buy_need_hyn_usdt_hint": "需：HYN等额 ${hyn}，USDT直充 ${usdt}",
   "balance_hyn_usdt": "可用余额 HYN等额 ${hyn}，USDT直充 ${usdt}",
-  "hyn_eq_u": "HYN等额",
+  "hyn_eq_u": "HYN转USDT",
   "usdt_direct": "USDT直充",
   "transfer_in_hyn": "转入HYN",
   "transfer_in_usdt": "转入USDT"
