ncov ui,  update version to 2.2.5.40

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -347,6 +347,5 @@
   "hot_search": "Popular searches：",
   "add_failed_exist_hint": "This location already exists, please add another location",
   "epidemic_map": "nCoV Map",
-  "epidemic_map_desc": "Wuhan Virus Cases Tracking Map",
-  "suspected": "pending"
+  "epidemic_map_desc": "Wuhan Virus Cases Tracking Map"
 }
