[add] add nCov guide

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -347,5 +347,6 @@
   "hot_search": "Popular searches：",
   "add_failed_exist_hint": "This location already exists, please add another location",
   "epidemic_map": "nCoV Map",
-  "epidemic_map_desc": "Wuhan Virus Cases Tracking Map"
+  "epidemic_map_desc": "Wuhan Virus Cases Tracking Map",
+  "ncov_guide": "nCov Guide"
 }
