--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -348,5 +348,43 @@
   "add_failed_exist_hint": "이 위치는 이미 존재합니다. 다른 위치를 추가하십시오",
   "epidemic_map": "전염병 발생 상황 지도",
   "epidemic_map_desc": "신종 폐렴의 전염병 발생 상황",
-  "ncov_guide": "발발 안내서"
+  "ncov_guide": "발발 안내서",
+  "isolation_yes": "是",
+  "isolation_no": "否",
+  "isolation_unknown": "未知",
+  "isolation_type_home": "居家自主",
+  "isolation_type_rent": "租住",
+  "isolation_type_stay": "投靠借住",
+  "isolation_type_hotel": "酒店旅店",
+  "symptoms_weak": "乏力",
+  "symptoms_hots": "发热",
+  "symptoms_cough": "干咳",
+  "symptoms_stuffy": "鼻塞",
+  "symptoms_nose_running": "流涕",
+  "symptoms_diarrhea": "腹泻",
+  "symptoms_breathing_difficult": "呼吸困难",
+  "ncov_cell_title_trip": "人员行程",
+  "ncov_cell_title_records": "接触记录",
+  "ncov_cell_title_safe": "安全防疫",
+  "ncov_cell_hint_trip": "如：1月1号从家到菜市场买菜，1月3号医院就诊。",
+  "ncov_cell_hint_records": "如：1月1号跟黄某某打牌2个小时。1月2号跟蒋某某喝茶谈笑1小时。1月4号去超市买菜。",
+  "ncov_cell_hint_safe": "如：小区已经封锁，只允许本小区人员出入。进入小区需要做健康检查小区楼道电梯每隔2小时消毒一次。",
+  "ncov_cell_title_symptoms": "是否有如下症状",
+  "ncov_cell_title_desc": "详细描述",
+  "ncov_cell_hint_input_desc": "请输入症状详细描述",
+  "ncov_cell_title_property": "居家属性",
+  "ncov_cell_title_isolation": "是否居家/在医院隔离",
+  "ncov_cell_title_category": "人员类型",
+  "ncov_cell_hint_category": "本地人/湖北来穗工程师/来穗出差办公等",
+  "ncov_cell_title_numbers": "确诊人数",
+  "ncov_cell_hint_numbers": "请输入确诊人数",
+  "ncov_cell_title_scene_images": "情景图片",
+  "ncov_cell_title_name": "地标名称",
+  "ncov_cell_hint_name": "请输入小区/地标名称",
+  "ncov_cell_hint_name_not_empty": "小区/地标名称不能为空",
+  "add_ncov_confirmed_info": "添加确诊信息",
+  "add_ncov_others": "其他",
+  "selecte_confirmed_position": "选择确诊位置",
+  "add_ncov_item_title": "添加新冠病毒疫情信息",
+  "show": "显示"
 }
