--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -348,5 +348,43 @@
   "add_failed_exist_hint": "This location already exists, please add another location",
   "epidemic_map": "nCoV Map",
   "epidemic_map_desc": "Wuhan Virus Cases Tracking Map",
-  "ncov_guide": "nCov Guide"
+  "ncov_guide": "nCov Guide",
+  "isolation_yes": "Yes",
+  "isolation_no": "No",
+  "isolation_unknown": "Unknown",
+  "isolation_type_home": "Home",
+  "isolation_type_rent": "Rent",
+  "isolation_type_stay": "Stay",
+  "isolation_type_hotel": "Hotel",
+  "symptoms_weak": "Weak",
+  "symptoms_hots": "Fever",
+  "symptoms_cough": "Cough",
+  "symptoms_stuffy": "Stuffy nose",
+  "symptoms_nose_running": "Nose Running",
+  "symptoms_diarrhea": "Diarrhea",
+  "symptoms_breathing_difficult": "Breathing difficulty",
+  "ncov_cell_title_trip": "Trip",
+  "ncov_cell_title_records": "Contact records",
+  "ncov_cell_title_safe": "Security and epidemic prevention",
+  "ncov_cell_hint_trip": "For example, I went to the vegetable market from home on January 1, and visited the hospital on January 3.",
+  "ncov_cell_hint_records": "On January 1, I played CARDS with huang for two hours. On January 2, I had tea with jiang xx and talked and laughed for 1 hour. Go to the supermarket to buy some vegetables on January 4th.",
+  "ncov_cell_hint_safe": "Such as: the community has been sealed off, only allow this community personnel access. Enter the village need to do health check village corridor elevator every 2 hours disinfection.",
+  "ncov_cell_title_symptoms": "Symptoms",
+  "ncov_cell_title_desc": "Detailed description",
+  "ncov_cell_hint_input_desc": "Please enter a detailed description of your symptoms",
+  "ncov_cell_title_property": "Attributes of home",
+  "ncov_cell_title_isolation": "Is it isolated at home/in hospital",
+  "ncov_cell_title_category": "Personnel type",
+  "ncov_cell_hint_category": "Native/hubei to guangzhou engineer/to guangzhou on business, etc",
+  "ncov_cell_title_numbers": "Confirmed count",
+  "ncov_cell_hint_numbers": "Please enter the number of confirmed cases",
+  "ncov_cell_title_scene_images": "Scene images",
+  "ncov_cell_title_name": "Landmark",
+  "ncov_cell_hint_name": "Please enter the name of the community/landmark",
+  "ncov_cell_hint_name_not_empty": "The neighborhood/landmark name cannot be empty",
+  "add_ncov_confirmed_info": "Add nCov information",
+  "add_ncov_others": "Other",
+  "selecte_confirmed_position": "Select nCov position",
+  "add_ncov_item_title": "Add nCov outbreak information",
+  "show": "Show"
 }
