change some word

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -386,4 +386,5 @@
   "add_ncov_others": "Other",
   "selecte_confirmed_position": "Select nCov position",
   "add_ncov_item_title": "Add nCov outbreak information",
+  "symptoms": "出现症状"
 }
