share ncp map.  i18n.

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -352,39 +352,42 @@
   "isolation_yes": "Yes",
   "isolation_no": "No",
   "isolation_unknown": "Unknown",
-  "isolation_type_home": "Home",
-  "isolation_type_rent": "Rent",
-  "isolation_type_stay": "Stay",
-  "isolation_type_hotel": "Hotel",
-  "symptoms_weak": "Weak",
+  "isolation_type_home": "House owner",
+  "isolation_type_rent": "Tenant",
+  "isolation_type_stay": "Short stay",
+  "isolation_type_hotel": "Hotels",
+  "symptoms_weak": "Fatigue",
   "symptoms_hots": "Fever",
   "symptoms_cough": "Cough",
   "symptoms_stuffy": "Stuffy nose",
-  "symptoms_nose_running": "Nose Running",
+  "symptoms_nose_running": "Running nose",
   "symptoms_diarrhea": "Diarrhea",
-  "symptoms_breathing_difficult": "Breathing difficulty",
-  "ncov_cell_title_trip": "Trip",
-  "ncov_cell_title_records": "Contact records",
-  "ncov_cell_title_safe": "Security and epidemic prevention",
-  "ncov_cell_hint_trip": "For example, I went to the vegetable market from home on January 1, and visited the hospital on January 3.",
-  "ncov_cell_hint_records": "On January 1, I played CARDS with huang for two hours. On January 2, I had tea with jiang xx and talked and laughed for 1 hour. Go to the supermarket to buy some vegetables on January 4th.",
-  "ncov_cell_hint_safe": "Such as: the community has been sealed off, only allow this community personnel access. Enter the village need to do health check village corridor elevator every 2 hours disinfection.",
-  "ncov_cell_title_symptoms": "Symptoms",
-  "ncov_cell_title_desc": "Detailed description",
-  "ncov_cell_hint_input_desc": "Please enter a detailed description of your symptoms",
-  "ncov_cell_title_property": "Attributes of home",
-  "ncov_cell_title_isolation": "Is it isolated at home/in hospital",
-  "ncov_cell_title_category": "Personnel type",
-  "ncov_cell_hint_category": "Native/hubei to guangzhou engineer/to guangzhou on business, etc",
-  "ncov_cell_title_numbers": "Confirmed count",
-  "ncov_cell_hint_numbers": "Please enter the number of confirmed cases",
-  "ncov_cell_title_scene_images": "Scene images",
-  "ncov_cell_title_name": "Landmark",
-  "ncov_cell_hint_name": "Please enter the name of the community/landmark",
-  "ncov_cell_hint_name_not_empty": "The neighborhood/landmark name cannot be empty",
-  "add_ncov_confirmed_info": "Add nCov information",
-  "add_ncov_others": "Other",
-  "selecte_confirmed_position": "Select nCov position",
-  "add_ncov_item_title": "Add nCov outbreak information",
-  "symptoms": "出现症状"
+  "symptoms_breathing_difficult": "Dyspnea",
+  "ncov_cell_title_trip": "Travel record",
+  "ncov_cell_title_records": "Contact record",
+  "ncov_cell_title_safe": "Epidemic preventions",
+  "ncov_cell_hint_trip": "e.g.：XX Went to the market on 1st Jan, and XX went to the hostpital on 3rd Jan.",
+  "ncov_cell_hint_records": "e.g.：XX played cards with HuangXX for two hours on 1st Jan. XX had tea with JiangXX for an hour with Jiang XX. XX went to the supermarket on 4th Jan.",
+  "ncov_cell_hint_safe": "e.g.：The community has been blocked for residents only。Health check is compulsory for entries, and corridors are disinfected every two hours.",
+  "ncov_cell_title_symptoms": "whether include the following symptoms",
+  "ncov_cell_title_desc": "Describe in details",
+  "ncov_cell_hint_input_desc": "Please input the symptom details",
+  "ncov_cell_title_property": "House status",
+  "ncov_cell_title_isolation": "isolated at home/in hospital",
+  "ncov_cell_title_category": "Personnel Status",
+  "ncov_cell_hint_category": "e.g.：Local/engineer from Hubei working in Guangdong/On business trip in Guangdong.",
+  "ncov_cell_title_numbers": "No. of confirmed cases",
+  "ncov_cell_hint_numbers": "Please input confirmed no.",
+  "ncov_cell_title_scene_images": "Scene Pictures",
+  "ncov_cell_title_name": "Name of the POI",
+  "ncov_cell_hint_name": "Please input name of the community/POI",
+  "ncov_cell_hint_name_not_empty": "Do not leave the name blank",
+  "add_ncov_confirmed_info": "Add info of confirmed cases",
+  "add_ncov_others": "Others",
+  "selecte_confirmed_position": "Select location of confirmed cases",
+  "add_ncov_item_title": "Add virus updates",
+  "symptoms": "Any symptoms",
+  "data_source_explain": "The red POIs are collected from China’s National and provincial Health Committee & Tencent News. The yellow POIs are contributed by users.",
+  "source_desc_title": "Data source desc",
+  "epidemic_map_short": "NCP MAP"
 }
