--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -349,42 +349,45 @@
   "epidemic_map": "전염병 발생 상황 지도",
   "epidemic_map_desc": "신종 폐렴의 전염병 발생 상황",
   "ncov_guide": "발발 안내서",
-  "isolation_yes": "是",
-  "isolation_no": "否",
-  "isolation_unknown": "未知",
-  "isolation_type_home": "居家自主",
-  "isolation_type_rent": "租住",
-  "isolation_type_stay": "投靠借住",
-  "isolation_type_hotel": "酒店旅店",
-  "symptoms_weak": "乏力",
-  "symptoms_hots": "发热",
-  "symptoms_cough": "干咳",
-  "symptoms_stuffy": "鼻塞",
-  "symptoms_nose_running": "流涕",
-  "symptoms_diarrhea": "腹泻",
-  "symptoms_breathing_difficult": "呼吸困难",
-  "ncov_cell_title_trip": "人员行程",
-  "ncov_cell_title_records": "接触记录",
-  "ncov_cell_title_safe": "安全防疫",
-  "ncov_cell_hint_trip": "如：1月1号从家到菜市场买菜，1月3号医院就诊。",
-  "ncov_cell_hint_records": "如：1月1号跟黄某某打牌2个小时。1月2号跟蒋某某喝茶谈笑1小时。1月4号去超市买菜。",
-  "ncov_cell_hint_safe": "如：小区已经封锁，只允许本小区人员出入。进入小区需要做健康检查小区楼道电梯每隔2小时消毒一次。",
-  "ncov_cell_title_symptoms": "是否有如下症状",
-  "ncov_cell_title_desc": "详细描述",
-  "ncov_cell_hint_input_desc": "请输入症状详细描述",
-  "ncov_cell_title_property": "居家属性",
-  "ncov_cell_title_isolation": "是否居家/医院隔离",
-  "ncov_cell_title_category": "人员类型",
-  "ncov_cell_hint_category": "本地人/湖北来穗工程师/来穗出差办公等",
-  "ncov_cell_title_numbers": "确诊人数",
-  "ncov_cell_hint_numbers": "请输入确诊人数",
-  "ncov_cell_title_scene_images": "情景图片",
-  "ncov_cell_title_name": "地标名称",
-  "ncov_cell_hint_name": "请输入小区/地标名称",
-  "ncov_cell_hint_name_not_empty": "小区/地标名称不能为空",
-  "add_ncov_confirmed_info": "添加确诊信息",
-  "add_ncov_others": "其他",
-  "selecte_confirmed_position": "选择确诊位置",
-  "add_ncov_item_title": "添加新冠病毒疫情信息",
-  "symptoms": "出现症状"
+  "isolation_yes": "네",
+  "isolation_no": "아니다",
+  "isolation_unknown": "아직 모르다",
+  "isolation_type_home": "자기 집에 살다",
+  "isolation_type_rent": "셋방살이",
+  "isolation_type_stay": "친척과 친구에게 의탁하여 거주하고 있다",
+  "isolation_type_hotel": "호텔 여관",
+  "symptoms_weak": "기력이 없다",
+  "symptoms_hots": "열이 나다",
+  "symptoms_cough": "헛기침을 하다.",
+  "symptoms_stuffy": "코막힘",
+  "symptoms_nose_running": "콧물이 나오다",
+  "symptoms_diarrhea": "설사",
+  "symptoms_breathing_difficult": "호흡이 곤란하다",
+  "ncov_cell_title_trip": "인원 스케줄",
+  "ncov_cell_title_records": "접촉 기록",
+  "ncov_cell_title_safe": "안전 예방 유행성 전염병",
+  "ncov_cell_hint_trip": "예를 들어 1월 1일에 집에서 채소시장으로 나가 채소를 사고 1월 3일에 병원을 방문했다. ",
+  "ncov_cell_hint_records": "예를 들어1월 1일에 황씨와 2시간 동안 카드놀이를 했다. 1월 2일에 장씨와 차를 마시며 1시간 동안 담소를 나눴다.1월 4일에 채소를 사러 슈퍼마켓에 갔다. ",
+  "ncov_cell_hint_safe": "예를 들어 아파트단지는 이미 봉쇄되어 본 아파트단지의 인원만 출입할 수 있다. 아파트단지에 들어가려면 건강검진을 해야 하고 아파트단지 복도와 엘리베이터 2시간마다 소독해야 한다. ",
+  "ncov_cell_title_symptoms": "다음과 같은 증상이 있는지 여부",
+  "ncov_cell_title_desc": "상세히 서술하다",
+  "ncov_cell_hint_input_desc": "증상 상세 묘사를 입력해 주십시오",
+  "ncov_cell_title_property": "거가 속성",
+  "ncov_cell_title_isolation": "자택/병원에서 격리 여부",
+  "ncov_cell_title_category": "인원 유형",
+  "ncov_cell_hint_category": "예를 들어현지인/호북에서 광주로 오는 엔지니어/광저우로 출장 와 사무를 보는 등",
+  "ncov_cell_title_numbers": "확진 인원수",
+  "ncov_cell_hint_numbers": "확진 인원수를 입력해 주십시오",
+  "ncov_cell_title_scene_images": "정경 사진",
+  "ncov_cell_title_name": "랜드마크 이름",
+  "ncov_cell_hint_name": "아파트 단지/랜드마크 이름을 입력해 주십사오",
+  "ncov_cell_hint_name_not_empty": "아파트 단지/랜드마크 이름은 비워 둘 수 없습니다",
+  "add_ncov_confirmed_info": "확진 정보 추가",
+  "add_ncov_others": "기타",
+  "selecte_confirmed_position": "확진 위치 선택",
+  "add_ncov_item_title": "신종 코로나 바이러스 발생 상황 정보를 추가한다",
+  "symptoms": "증상이 나타나다",
+  "data_source_explain": "붉은 POI 점 데이터는 중국 국가 및 각 성 시 위건위& 텐센트 뉴스 등 공식 데이터에서 유래했다.노란색 POI 점 데이터는 타이탄 사용자의 기여에서 유래했다.",
+  "source_desc_title": "데이터 소스 설명",
+  "epidemic_map_short": "NCP 지도"
 }
