--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -339,7 +339,7 @@
   "poi_confirm_title_error": "Are you sure the POI is incorrect before you submit？",
   "poi_upload_protocol": "Privacy Policy",
   "select_position_please_again_hint": "Location selection failed. Please try again",
-  "get_poi_fail_please_again": "Please allow access to your location。",
+  "get_poi_fail_please_again": "Please allow access to your location.",
   "please_input_custom_time_hint": "Please enter a time",
   "no_remark": "No remarks",
   "post_my_check": "Submit verification",
@@ -366,16 +366,16 @@
   "ncov_cell_title_trip": "Travel record",
   "ncov_cell_title_records": "Contact record",
   "ncov_cell_title_safe": "Epidemic preventions",
-  "ncov_cell_hint_trip": "e.g.：XX Went to the market on 1st Jan, and XX went to the hostpital on 3rd Jan.",
-  "ncov_cell_hint_records": "e.g.：XX played cards with HuangXX for two hours on 1st Jan. XX had tea with JiangXX for an hour with Jiang XX. XX went to the supermarket on 4th Jan.",
-  "ncov_cell_hint_safe": "e.g.：The community has been blocked for residents only。Health check is compulsory for entries, and corridors are disinfected every two hours.",
+  "ncov_cell_hint_trip": "e.g.: XX Went to the market on 1st Jan, and XX went to the hostpital on 3rd Jan.",
+  "ncov_cell_hint_records": "e.g.: XX played cards with HuangXX for two hours on 1st Jan. XX had tea with JiangXX for an hour with Jiang XX. XX went to the supermarket on 4th Jan.",
+  "ncov_cell_hint_safe": "e.g.: The community has been blocked for residents only.Health check is compulsory for entries, and corridors are disinfected every two hours.",
   "ncov_cell_title_symptoms": "whether include the following symptoms",
   "ncov_cell_title_desc": "Describe in details",
   "ncov_cell_hint_input_desc": "Please input the symptom details",
   "ncov_cell_title_property": "House status",
   "ncov_cell_title_isolation": "isolated at home/in hospital",
   "ncov_cell_title_category": "Personnel Status",
-  "ncov_cell_hint_category": "e.g.：Local/engineer from Hubei working in Guangdong/On business trip in Guangdong.",
+  "ncov_cell_hint_category": "e.g.: Local/engineer from Hubei working in Guangdong/On business trip in Guangdong.",
   "ncov_cell_title_numbers": "No. of confirmed cases",
   "ncov_cell_hint_numbers": "Please input confirmed no.",
   "ncov_cell_title_scene_images": "Scene Pictures",
